# RustWebsiteTest

./: Cargo.toml  index.html
src/: main.rs
