[package]
name = "rust_website_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.23", features = ["serde"]}
gloo-console = "0.2.3"
gloo-net = "0.2.6"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = {version = "0.3.61", features = ["HtmlSelectElement", "HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
